retrieve by field method for elasticsearch added && retrieve by id method for elasticsearch added && update method for elasticsearch added && delete method for elasticsearch added